recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:20: error: not enough arguments for method hexaKoch: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    hexaKoch(levels(-1,length*0.14))
            ^